2004/02/09 01:24 (-0500) muppetman

	* xs/GtkSelection.xs: make the parsing code for the array and hash
	forms of Gtk2::TargetEntry agree on the value types.   add pod for the
	format of a Gtk2::TargetEntry.

2004/02/08 21:45 (-0500) muppetman

	* Gtk2.pm, README, NEWS: unstable release 1.034

	* Makefile.PL, README: require Glib 1.034

	* t/GtkListStore.t, t/GtkTreeStore.t: update skips and such for
	gtk+ 2.0.x

2004/02/07 02:22 (-0500) muppetman

	* xs/GtkCellEditable.xs: allow perl implementations of GtkCellEditable

	* xs/GtkTreeModel.xs: allow perl implementations of GtkTreeModel.
	big thanks to Bjarne Steinsbo for helping iron out the memory
	management wrinkles for GtkTreeIter.  doc on writing tree models is
	incomplete but started; i'd prefer if that doc section came *after*
	the normal method listing, but Glib::GenPod doesn't support that
	sort of thing at the moment.

	* examples/customlist.pl, examples/customrenderer.pl, MANIFEST:
	new examples, implementing interfaces

2004/02/06 22:25 (+0100) kaffeetisch

	* MANIFEST
	A t/GtkCellEditable.t
	A t/GtkEditable.t
	A t/GtkTreeModelSort.t
	A t/GtkTreeSortable.t: New tests.

	* t/GtkTreeModelFilter.t
	* t/GtkCellLayout.t: Implement.

	A t/GtkTreeModel.t
	* MANIFEST
	* t/GtkListStore.t
	* t/GtkTreeStore.t: Rearrange the tree model tests quite a bit to
	better suit the XS layout.

	* xs/GtkCellEditable.xs: Provide a default for the event argument
	of start_editing.

	* xs/GtkEditable.xs: Remove the string length argument from
	insert_text but keep it compatible with the old version.

	* xs/GtkObject.xs: Don't include "../gtk2perl.h" and "../ppport.h"
	but "gtk2perl.h" and "ppport.h".

	* xs/GtkTreeModelFilter.xs: Provide a default for the root
	argument of new and for the func argument of set_modify_func.  Fix
	an allocation bug.  Implement convert_child_iter_to_iter and
	convert_iter_to_child_iter.

	* xs/GtkTreeModelSort.xs: Add a class argument to new_with_model.

	* xs/GtkComboBox.xs