@@ -125,6 +125,9 @@ t/GtkCalendar.t
 t/GtkCellEditable.t
 t/GtkCellLayout.t
 t/GtkCellRenderer.t
+t/GtkCellRendererPixbuf.t
+t/GtkCellRendererText.t
+t/GtkCellRendererToggle.t
 t/GtkCheckButton.t
 t/GtkCheckMenuItem.t
 t/GtkClipboard.t
